--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "pinia": "^2.0.32",
     "primeicons": "^6.0.1",
     "primevue": "^3.35.0",
+    "swiper": "^10.3.1",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
